package com.priceservice.price.controller;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class PriceController {
}
