package com.priceservice.price.mapper;

public class PriceMapper {
}
