package com.priceservice.price.service;

import org.springframework.stereotype.Service;

@Service
public class PriceService {
}
